--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Nova | Bootstrap app landing</title>
+    <title>RSN | Home</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -23,7 +23,7 @@
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/favicon.png">
+    <link rel="shortcut icon" href="img/favicon1.png">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -50,8 +50,8 @@
       <div class="container">
         <div class="row py-5">
           <div class="col-lg-5 py-5">
-            <h1 class="font-weight-bold">Download your best app landing</h1>
-            <p class="my-4 text-muted">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod.</p>
+            <h1 class="font-weight-bold">A Covid-19 response project by New Regional Stakeholder Network and Northumbria University</h1>
+            <p class="my-4 text-muted">Late last year the Government created the innovative Regional Stakeholder Networks to bring the voice of people with disabilities into the heart of Government. Their aim is to bring together the views, ideas, and lived experiences of the disabled community and those who work with them (ranging from family and social care to bodies in local government, charities, the NHS, and beyond).</p> <p>The lockdown has had a massive impact upon the UK in all parts of our society. To respond to this situation, we set up a project in collaboration with Northumbria University to allow the Network to get a wider understanding on how this emergency is affecting us in the North East.</p>
             <ul class="list-inline mb-0">
               <li class="list-inline-item mb-2 mb-lg-0"><a class="btn btn-primary btn-lg px-4" href="#"> <i class="fab fa-google-play mr-3"></i>Google Play</a></li>
               <li class="list-inline-item"><a class="btn btn-primary btn-lg px-4" href="#"> <i class="fab fa-app-store mr-3"></i>App Store</a></li>
