--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a class="nav-link link-scroll active" href="#hero">Home <span class="sr-only">(current)</span></a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="#about">About</a></li>
-              <li class="nav-item"><a class="nav-link link-scroll" href="#services">Services</a></li>
-              <li class="nav-item"><a class="nav-link link-scroll" href="#testimonials">Testimonials</a></li>
+              <li class="nav-item"><a class="nav-link link-scroll" href="#team">Team</a></li>
+              <li class="nav-item"><a class="nav-link link-scroll" href="#contact">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -50,7 +50,7 @@
       <div class="container">
         <div class="row py-5">
           <div class="col-lg-6 py-6">
-            <h1 class="font-weight-bold">A Covid-19 response project by New Regional Stakeholder Network and Northumbria University</h1>
+            <h6 class="font-weight-bold">A Covid-19 response project by New Regional Stakeholder Network and Northumbria University</h6>
             <p class="my-4">Late last year the Government created the innovative Regional Stakeholder Networks to bring the voice of people with disabilities into the heart of Government. Their aim is to bring together the views, ideas, and lived experiences of the disabled community and those who work with them (ranging from family and social care to bodies in local government, charities, the NHS, and beyond).</p> <p class="my-4">The lockdown has had a massive impact upon the UK in all parts of our society. To respond to this situation, we set up a project in collaboration with Northumbria University to allow the Network to get a wider understanding on how this emergency is affecting us in the North East.</p>
             <ul class="list-inline mb-0">
               <li class="list-inline-item mb-2 mb-lg-0"><a class="btn btn-primary btn-lg px-4" href="#"> <i class="fab fa-google-play mr-3"></i>Like to form</a></li>
