--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
             <h6 class="font-weight-bold">A Covid-19 response project by New Regional Stakeholder Network and Northumbria University</h6>
             <p class="my-4">Late last year the Government created the innovative Regional Stakeholder Networks to bring the voice of people with disabilities into the heart of Government. Their aim is to bring together the views, ideas, and lived experiences of the disabled community and those who work with them (ranging from family and social care to bodies in local government, charities, the NHS, and beyond).</p> <p class="my-4">The lockdown has had a massive impact upon the UK in all parts of our society. To respond to this situation, we set up a project in collaboration with Northumbria University to allow the Network to get a wider understanding on how this emergency is affecting us in the North East.</p>
             <ul class="list-inline mb-0">
-              <li class="list-inline-item mb-2 mb-lg-0"><a class="btn btn-success btn-lg px-4" href="#"> <i class="fab fa-google-play mr-3"></i>Like to form</a></li>
-              <li class="list-inline-item"><a class="btn btn-success btn-lg px-4" href="#"> <i class="fab fa-app-store mr-3"></i>App Store</a></li>
+              <li class="list-inline-item mb-2 mb-lg-0"><a class="btn btn-primary btn-lg px-4" href="#"> <i class="far fa-clipboard mr-3"></i></i>Link to form</a></li>
             </ul>
           </div>
           <div class="col-lg-6 ml-auto">
