--- a/team.html
+++ b/team.html
@@ -45,6 +45,28 @@
         </div>
       </nav>
     </header>
+     <!-- Hero Section-->
+    <section class="hero bg-top" id="hero" style="background: url(img/banner-4.png) no-repeat; background-size: 100% 80%">
+      <div class="container">
+        <div class="row py-5">
+          <div class="col-lg-6 py-6">
+            <h6 class="font-weight-bold">A Covid-19 response project by New Regional Stakeholder Network and Northumbria University</h6>
+            <p class="my-4">Late last year the Government created the innovative Regional Stakeholder Networks to bring the voice of people with disabilities into the heart of Government. Their aim is to bring together the views, ideas, and lived experiences of the disabled community and those who work with them (ranging from family and social care to bodies in local government, charities, the NHS, and beyond).</p> <p class="my-4">The lockdown has had a massive impact upon the UK in all parts of our society. To respond to this situation, we set up a project in collaboration with Northumbria University to allow the Network to get a wider understanding on how this emergency is affecting us in the North East.</p>
+            <p class="my-4">Our first aim in this project is to gather responses to an initial set of questions to get an overview of some of the views and knowledge from organisations in the region. We have set up a survey to inquire how funding and the current situation influence what your organisation is able to do for those living with disabilities in your region.</p> <p class="my-4">Your knowledge of the disabled community would allow us to gain a more detailed picture of the region and help us discover the needs and concerns of the region’s disabled community, both in general and during this current situation. This initial consultation is being carried out by Northumbria University on behalf of the Regional Stakeholder Network.</p>
+            <ul class="list-inline mb-0">
+              <li class="list-inline-item mb-2 mb-lg-0"><a class="btn btn-primary btn-lg px-4" href="#"> <i class="fas fa-list-alt mr-2"></i>Link to survey here</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-6 ml-auto">
+            <div class="device-wrapper mx-auto">
+              <div class="device shadow" data-device="iPhoneX" data-orientation="portrait" data-color="black">
+                <div class="screen"><img class="img-fluid" src="img/mobile.png" alt=""></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
       <section class="bg-center py-0" id="team" style="background: url(img/service-bg.svg) no-repeat; background-size: cover">
       <section class="about py-0">
         <div class="container">
