--- a/team.html
+++ b/team.html
@@ -36,9 +36,9 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a class="nav-link link-scroll active" href="index.html">Home <span class="sr-only">(current)</span></a></li>
-              <li class="nav-item"><a class="nav-link link-scroll" href="about.html">About</a></li>
-              <li class="nav-item"><a class="nav-link link-scroll" href="team.html">Team</a></li>
+              <li class="nav-item"><a class="nav-link link-scroll" href="index.html">Home <span class="sr-only">(current)</span></a></li>
+              <li class="nav-item"><a class="nav-link link-scroll " href="about.html">About</a></li>
+              <li class="nav-item"><a class="nav-link link-scroll active" href="team.html">Team</a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="contact.html">Contact</a></li>
             </ul>
           </div>
