--- a/index.html
+++ b/index.html
@@ -78,21 +78,9 @@
             <h2 class="h5 mb-4">Quick Links</h2>
             <div class="d-flex">
               <ul class="list-unstyled d-inline-block mr-4 mb-0">
-                <li class="mb-2"><a class="footer-link" href="#">History </a></li>
-                <li class="mb-2"><a class="footer-link" href="#">About us</a></li>
+                <li class="mb-2"><a class="footer-link" href="#">About the project </a></li>
+                <li class="mb-2"><a class="footer-link" href="#">Our Team </a></li>
                 <li class="mb-2"><a class="footer-link" href="#">Contact us</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Services</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-2 mb-4 mb-lg-0">
-            <h2 class="h5 mb-4">Services</h2>
-            <div class="d-flex">
-              <ul class="list-unstyled mr-4 mb-0">
-                <li class="mb-2"><a class="footer-link" href="#">History </a></li>
-                <li class="mb-2"><a class="footer-link" href="#">About us</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Contact us</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Services</a></li>
               </ul>
             </div>
           </div>
