--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
     <a class="scropll-top-btn" id="scrollTop" href="#"><i class="fas fa-long-arrow-alt-up"></i></a>
     <footer class="with-pattern-1 position-relative">
-      <div class="container section-padding-y">
+      <div class="container">
         <div class="row">
           <div class="col-lg-3 mb-4 mb-lg-0"><img class="mb-4" src="img/logo.png" alt="" width="110">
             <p class="text-muted"></p>
