--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div>
       <div class="copyrights">       
         <div class="container text-center py-4">
-          <p class="mb-0 text-muted text-sm">&copy; 2020.</p>
+          <p class="mb-0 text-muted text-sm">&copy; 2020. All Rights Reserved.</p>
         </div>
       </div>
     </footer>
