--- a/singlePage.html
+++ b/singlePage.html
@@ -1,1 +1,140 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>RSN NE | Home</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="all,follow">
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+    <!-- Owl Carousel-->
+    <link rel="stylesheet" href="vendor/owl.carousel2/assets/owl.carousel.css">
+    <link rel="stylesheet" href="vendor/owl.carousel2/assets/owl.theme.default.css">
+    <!-- Modal Video-->
+    <link rel="stylesheet" href="vendor/modal-video/css/modal-video.min.css">
+    <!-- Google fonts-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:400,600,800&amp;display=swap">
+    <!-- Device Mockup-->
+    <link rel="stylesheet" href="css/device-mockups.css">
+    <!-- theme stylesheet-->
+    <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
+    <!-- Custom stylesheet - for your changes-->
+    <link rel="stylesheet" href="css/custom.css">
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="img/favicon1.png">
+    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+  </head>
+  <body>
+    <!-- navbar-->
+    <header class="header">
+      <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container"><a class="navbar-brand" href="#"><img src="img/logo.png" alt="" width="250"></a>
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item"><a class="nav-link link-scroll active" href="index.html">Home <span class="sr-only">(current)</span></a></li>
+              <li class="nav-item"><a class="nav-link link-scroll" href="about.html">About</a></li>
+              <li class="nav-item"><a class="nav-link link-scroll" href="team.html">Team</a></li>
+              <li class="nav-item"><a class="nav-link link-scroll" href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- Hero Section-->
+    <section class="hero bg-top" id="hero" style="background: url(img/banner-4.png) no-repeat; background-size: 100% 80%">
+      <div class="container">
+        <div class="row py-5">
+          <div class="col-lg-7 py-6">
+            <h5 class="font-weight-bold">A Covid-19 response project by New Regional Stakeholder Network and Northumbria University</h5>
+            <p class="my-4">Late last year the Government created the innovative Regional Stakeholder Networks to bring the voice of people with disabilities into the heart of Government. Their aim is to bring together the views, ideas, and lived experiences of the disabled community and those who work with them (ranging from family and social care to bodies in local government, charities, the NHS, and beyond).</p> <p class="my-4">The lockdown has had a massive impact upon the UK in all parts of our society. To respond to this situation, we set up a project in collaboration with Northumbria University to allow the Network to get a wider understanding on how this emergency is affecting us in the North East.</p>
+            <p class="my-4">Our first aim in this project is to gather responses to an initial set of questions to get an overview of some of the views and knowledge from organisations in the region. We have set up a survey to inquire how funding and the current situation influence what your organisation is able to do for those living with disabilities in your region.</p> <p class="my-4">Your knowledge of the disabled community would allow us to gain a more detailed picture of the region and help us discover the needs and concerns of the region’s disabled community, both in general and during this current situation. This initial consultation is being carried out by Northumbria University on behalf of the Regional Stakeholder Network.</p>
+            <ul class="list-inline mb-0">
+              <li class="list-inline-item mb-2 mb-lg-0"><a class="btn btn-primary btn-lg px-4" href="https://forms.office.com/Pages/ResponsePage.aspx?id=3c9X5zUfV0Svj3ycaxQ340PritOjm0RNgACUwols-l9UMVI1RjQ5SUY4RE5XQVY5RVM2MkFJSE05Qy4u"> <i class="fas fa-edit mr-2"></i>Link to survey here</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-5 ml-auto">
+            <div class="device-wrapper mx-auto">
+              <div class="device shadow" data-device="iPhoneX" data-orientation="portrait" data-color="black">
+                <div class="screen"><img class="img-fluid" src="img/mobile.png" alt=""></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <a class="scropll-top-btn" id="scrollTop" href="#"><i class="fas fa-long-arrow-alt-up"></i></a>
+    <footer class="with-pattern-1 position-relative">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 mb-4 mb-lg-0"><img class="mb-2" src="img/logo.png" alt="" width="250">
+            <p class="text-muted">A Covid-19 response project by New Regional Stakeholder Network and Northumbria University</p>
+          </div>
+          <div class="col-lg-3 mb-4 mb-lg-0">
+            <h2 class="h5 mb-4">Quick Links</h2>
+            <div class="d-flex">
+              <ul class="list-unstyled d-inline-block mr-4 mb-0">
+                <li class="mb-2"><a class="footer-link" href="#">About the project </a></li>
+                <li class="mb-2"><a class="footer-link" href="#">Our Team </a></li>
+                <li class="mb-2"><a class="footer-link" href="#">Contact us</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-5">
+            <h2 class="h5 mb-4">Contact Info</h2>
+            <ul class="list-unstyled mr-4 mb-3">
+              <li class="mb-2 text-muted"> </li>
+              <li class="mb-2"><a class="footer-link" href="tel:000-000-0000">000-000-0000</a></li>
+              <li class="mb-2"><a class="footer-link" href="mailto:email@example.com">email@example.com</a></li>
+            </ul>
+            <ul class="list-inline mb-0">
+              <li class="list-inline-item"><a class="social-link" href="https://twitter.com/RSNInitiative"><i class="fab fa-twitter"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="copyrights">       
+        <div class="container text-center py-4">
+          <p class="mb-0 text-muted text-sm">&copy; 2020. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
+    <!-- JavaScript files-->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/owl.carousel2/owl.carousel.min.js"></script>
+    <script src="vendor/modal-video/js/modal-video.js"></script>
+    <script src="js/front.js"></script>
+    <script>
+      // ------------------------------------------------------- //
+      //   Inject SVG Sprite - 
+      //   see more here 
+      //   https://css-tricks.com/ajaxing-svg-sprite/
+      // ------------------------------------------------------ //
+      function injectSvgSprite(path) {
+      
+          var ajax = new XMLHttpRequest();
+          ajax.open("GET", path, true);
+          ajax.send();
+          ajax.onload = function(e) {
+          var div = document.createElement("div");
+          div.className = 'd-none';
+          div.innerHTML = ajax.responseText;
+          document.body.insertBefore(div, document.body.childNodes[0]);
+          }
+      }
+      // this is set to BootstrapTemple website as you cannot 
+      // inject local SVG sprite (using only 'icons/orion-svg-sprite.svg' path)
+      // while using file:// protocol
+      // pls don't forget to change to your domain :)
+      injectSvgSprite('https://bootstraptemple.com/files/icons/orion-svg-sprite.svg'); 
+      
+    </script>
+    <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  </body>
+</html>
