--- a/team.html
+++ b/team.html
@@ -61,7 +61,7 @@
               <div class="card border-0 shadow rounded-lg py-4 text-left">
                 <div class="card-body p-3">
                   <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#ff904e">
-                    <use xlink:href="#document-saved-1"> </use>
+                    <use xlink:href="#user-1"></use>
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Michael Potts </h3>
                   <p class="text-small mb-0">Chair of Regional Stakeholder Network North East</p>
@@ -73,7 +73,7 @@
               <div class="card border-0 shadow rounded-lg py-4 text-left">
                 <div class="card-body p-3">
                   <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
-                    <use xlink:href="#map-marker-1"> </use>
+                    <use xlink:href="#user-1"></use>
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Kyle Montague </h3>
                   <p class="text-small mb-0">Northumbria University</p>
@@ -85,7 +85,7 @@
               <div class="card border-0 shadow rounded-lg py-4 text-left">
                 <div class="card-body p-3">
                   <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
-                    <use xlink:href="#map-marker-1"> </use>
+                    <use xlink:href="#user-1"></use>
                   </svg>
                   <h3 class="font-weight-normal h5 my-4"> Abdulaziz Alderhami</h3>
                   <p class="text-small mb-0">Newcastle University</p>
@@ -97,7 +97,7 @@
               <div class="card border-0 shadow rounded-lg py-4 text-left">
                 <div class="card-body p-3">
                   <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
-                    <use xlink:href="#map-marker-1"> </use>
+                    <use xlink:href="#user-1"></use>
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Anne Spaa </h3>
                   <p class="text-small mb-0">Northumbria University</p>
@@ -109,7 +109,7 @@
               <div class="card border-0 shadow rounded-lg py-4 text-left">
                 <div class="card-body p-3">
                   <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#8190ff">
-                    <use xlink:href="#arrow-target-1"> </use>
+                    <use xlink:href="#user-1"></use>
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Rob Wilson </h3>
                   <p class="text-small mb-0">Northumbria University</p>
