--- a/team.html
+++ b/team.html
@@ -65,6 +65,10 @@
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Michael Potts </h3>
                   <p class="text-small mb-0">Chair of Regional Stakeholder Network North East</p>
+                   <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-email"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                  </ul>
                 </div>
               </div>
             </div>
