--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
               <li class="mb-2"><a class="footer-link" href="mailto:email@example.com">email@example.com</a></li>
             </ul>
             <ul class="list-inline mb-0">
+              <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-facebook-f"></i></a></li>
               <li class="list-inline-item"><a class="social-link" href="https://twitter.com/RSNInitiative"><i class="fab fa-twitter"></i></a></li>
             </ul>
           </div>
