--- a/team.html
+++ b/team.html
@@ -66,9 +66,9 @@
                   <h3 class="font-weight-normal h5 my-4">Michael Potts </h3>
                   <p class="text-small mb-0">Chair of Regional Stakeholder Network North East</p>
                    <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-email"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
                     <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
-                  </ul>
+                   </ul>
                 </div>
               </div>
             </div>
@@ -81,6 +81,10 @@
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Kyle Montague </h3>
                   <p class="text-small mb-0">Northumbria University</p>
+                   <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                   </ul>
                 </div>
               </div>
             </div>
@@ -93,6 +97,10 @@
                   </svg>
                   <h3 class="font-weight-normal h5 my-4"> Abdulaziz Alderhami</h3>
                   <p class="text-small mb-0">Newcastle University</p>
+                   <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                   </ul>
                 </div>
               </div>
             </div>
@@ -105,6 +113,10 @@
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Anne Spaa </h3>
                   <p class="text-small mb-0">Northumbria University</p>
+                   <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                   </ul>
                 </div>
               </div>
             </div>
@@ -117,6 +129,10 @@
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Rob Wilson </h3>
                   <p class="text-small mb-0">Northumbria University</p>
+                    <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                   </ul>
                 </div>
               </div>
             </div>
