--- a/team.html
+++ b/team.html
@@ -58,7 +58,7 @@
           <div class="row pb-5">
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
-              <div class="card border-0 shadow rounded-lg py-4 text-left">
+              <div class="card border-0 shadow rounded-lg text-left">
                 <div class="card-body p-3">
                   <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
                     <use xlink:href="#user-1"></use>
@@ -74,7 +74,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
-              <div class="card border-0 shadow rounded-lg py-4 text-left">
+              <div class="card border-0 shadow rounded-lg text-left">
                 <div class="card-body p-3">
                   <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
                     <use xlink:href="#user-1"></use>
@@ -90,7 +90,7 @@
             </div>
              <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
-              <div class="card border-0 shadow rounded-lg py-4 text-left">
+              <div class="card border-0 shadow rounded-lg text-left">
                 <div class="card-body p-3">
                   <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
                     <use xlink:href="#user-1"></use>
@@ -106,7 +106,7 @@
             </div>
              <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
-              <div class="card border-0 shadow rounded-lg py-4 text-left">
+              <div class="card border-0 shadow rounded-lg text-left">
                 <div class="card-body p-3">
                   <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
                     <use xlink:href="#user-1"></use>
@@ -122,7 +122,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
               <!-- Services Item-->
-              <div class="card border-0 shadow rounded-lg py-4 text-left">
+              <div class="card border-0 shadow rounded-lg text-left">
                 <div class="card-body p-3">
                   <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
                     <use xlink:href="#user-1"></use>
