--- a/singlePage.html
+++ b/singlePage.html
@@ -67,6 +67,96 @@
         </div>
       </div>
     </section>
+    
+      <section class="bg-center py-0" id="team" style="background: url(img/service-bg.svg) no-repeat; background-size: cover">
+      <section class="about py-0">
+        <div class="container">
+          <p class="h6 text-uppercase text-primary">Our Team</p>
+          <h2 class="mb-5"> </h2>
+          <div class="row pb-5">
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+              <!-- Services Item-->
+              <div class="card border-0 shadow rounded-lg text-left">
+                <div class="card-body p-3">
+                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
+                    <use xlink:href="#user-1"></use>
+                  </svg>
+                  <h3 class="font-weight-normal h5 my-4">Michael Potts </h3>
+                  <p class="text-small mb-0">Chair of Regional Stakeholder Network North East</p>
+                   <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                   </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+              <!-- Services Item-->
+              <div class="card border-0 shadow rounded-lg text-left">
+                <div class="card-body p-3">
+                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
+                    <use xlink:href="#user-1"></use>
+                  </svg>
+                  <h3 class="font-weight-normal h5 my-4">Kyle Montague </h3>
+                  <p class="text-small mb-0">Northumbria University</p>
+                   <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                   </ul>
+                </div>
+              </div>
+            </div>
+             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+              <!-- Services Item-->
+              <div class="card border-0 shadow rounded-lg text-left">
+                <div class="card-body p-3">
+                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
+                    <use xlink:href="#user-1"></use>
+                  </svg>
+                  <h3 class="font-weight-normal h5 my-4"> Abdulaziz Alderhami</h3>
+                  <p class="text-small mb-0">Newcastle University</p>
+                   <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                   </ul>
+                </div>
+              </div>
+            </div>
+             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+              <!-- Services Item-->
+              <div class="card border-0 shadow rounded-lg text-left">
+                <div class="card-body p-3">
+                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
+                    <use xlink:href="#user-1"></use>
+                  </svg>
+                  <h3 class="font-weight-normal h5 my-4">Anne Spaa </h3>
+                  <p class="text-small mb-0">Northumbria University</p>
+                   <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                   </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <!-- Services Item-->
+              <div class="card border-0 shadow rounded-lg text-left">
+                <div class="card-body p-3">
+                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
+                    <use xlink:href="#user-1"></use>
+                  </svg>
+                  <h3 class="font-weight-normal h5 my-4">Rob Wilson </h3>
+                  <p class="text-small mb-0">Northumbria University</p>
+                    <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                   </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     <a class="scropll-top-btn" id="scrollTop" href="#"><i class="fas fa-long-arrow-alt-up"></i></a>
     <footer class="with-pattern-1 position-relative">
       <div class="container">
