--- a/team.html
+++ b/team.html
@@ -60,7 +60,7 @@
               <!-- Services Item-->
               <div class="card border-0 shadow rounded-lg text-left">
                 <div class="card-body p-3">
-                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
+                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#10b533">
                     <use xlink:href="#user-1"></use>
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Michael Potts </h3>
@@ -76,7 +76,7 @@
               <!-- Services Item-->
               <div class="card border-0 shadow rounded-lg text-left">
                 <div class="card-body p-3">
-                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
+                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#10b533">
                     <use xlink:href="#user-1"></use>
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Kyle Montague </h3>
@@ -92,7 +92,7 @@
               <!-- Services Item-->
               <div class="card border-0 shadow rounded-lg text-left">
                 <div class="card-body p-3">
-                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
+                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#10b533">
                     <use xlink:href="#user-1"></use>
                   </svg>
                   <h3 class="font-weight-normal h5 my-4"> Abdulaziz Alderhami</h3>
@@ -108,7 +108,7 @@
               <!-- Services Item-->
               <div class="card border-0 shadow rounded-lg text-left">
                 <div class="card-body p-3">
-                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
+                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#10b533">
                     <use xlink:href="#user-1"></use>
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Anne Spaa </h3>
@@ -124,7 +124,7 @@
               <!-- Services Item-->
               <div class="card border-0 shadow rounded-lg text-left">
                 <div class="card-body p-3">
-                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#39f8d2">
+                  <svg class="svg-icon svg-icon-light" style="width:60px;height:60px;color:#10b533">
                     <use xlink:href="#user-1"></use>
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Rob Wilson </h3>
