--- a/team.html
+++ b/team.html
@@ -53,8 +53,8 @@
       <section class="bg-center py-0" id="team" style="background: url(img/service-bg.svg) no-repeat; background-size: cover">
       <section class="about py-0">
         <div class="container">
-          <p class="h6 text-uppercase text-primary">Our Team</p>
-          <h2 class="mb-5"> </h2>
+          <p class="h6 text-uppercase text-primary"></p>
+          <h2 class="mb-3">Our Team </h2>
           <div class="row pb-5">
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
