--- a/about.html
+++ b/about.html
@@ -53,9 +53,11 @@
             <h5 class="font-weight-bold">A New Regional Stakeholder Network</h5>
             <p class="my-4">Late last year the Government created the innovative Regional Stakeholder Networks to bring the voice of people with disabilities into the heart of Government. Their aim is to bring together the views, ideas, and lived experiences of the disabled community and those who work with them (ranging from family and social care to bodies in local government, charities, the NHS, and beyond).</p> 
             <p class="my-4">With these insights, we will give a new voice to the disabled community in the regions and inform national policy makers on how national policies affect the North East. The Networks exist to empower the disabled community and to allow their experiences to be heard locally and nationally.</p>
-            <ul class="list-inline mb-0">
-              <li class="list-inline-item mb-2 mb-lg-0"><a class="btn btn-primary btn-lg px-4" href="https://forms.office.com/Pages/ResponsePage.aspx?id=3c9X5zUfV0Svj3ycaxQ340PritOjm0RNgACUwols-l9UMVI1RjQ5SUY4RE5XQVY5RVM2MkFJSE05Qy4u"> <i class="fas fa-edit mr-2"></i>Link to survey here</a></li>
-            </ul>
+
+            <h5 class="font-weight-bold">An initiative to respond to the current situation</h5>
+            <p class="my-4">The lockdown has had a massive impact upon the UK in all parts of our society. The network has received lots of feedback from across the North East region regarding how the situation is affecting them. To respond to this situation, we set up a project in collaboration with Northumbria University to allow the Network to get a wider understanding on how this emergency is affecting us in the North East.</p> 
+            <p class="my-4">For this ongoing project we seek to work with individuals, carers, groups, local authorities, care providers and stakeholders. Your organisation has been invited to participate either by a member of our working group or a local or regional network.  We are particularly interested in getting your response given your work with and expertise of those living with disabilities in the North East. Your knowledge of the disabled community would allow us to gain a more detailed picture of the region and help us discover the needs and concerns of the region’s disabled community, both in general and during this current situation. As a first step to start this initiative we have set up a survey to inquire how funding and the current situation influence what your organisation is able to do for those living with disabilities in your region. We would like to invite you to fill this survey out on behalf of your organisation.</p>
+            
           </div>
           <div class="col-lg-5 ml-auto">
             <div class="device-wrapper mx-auto">
