--- a/about.html
+++ b/about.html
@@ -65,6 +65,9 @@
                 <div class="screen"><img class="img-fluid" src="img/mobile.png" alt=""></div>
               </div>
             </div>
+             <ul class="list-inline mb-0">
+              <li class="list-inline-item mb-2 mb-lg-0" style="text-align: center"><a class="btn btn-primary btn-lg px-4" href="https://forms.office.com/Pages/ResponsePage.aspx?id=3c9X5zUfV0Svj3ycaxQ340PritOjm0RNgACUwols-l9UMVI1RjQ5SUY4RE5XQVY5RVM2MkFJSE05Qy4u" target="_blank"> <i class="fas fa-edit mr-2"></i>Link to survey here</a></li>
+            </ul>
           </div>
         </div>
       </div>
