--- a/about.html
+++ b/about.html
@@ -60,12 +60,12 @@
             
           </div>
           <div class="col-lg-5 ml-auto">
-            <div class="device-wrapper mx-auto">
+            <div class="device-wrapper mx-auto" style="text-align:center">
               <div class="device shadow" data-device="iPhoneX" data-orientation="portrait" data-color="black">
                 <div class="screen"><img class="img-fluid" src="img/mobile.png" alt=""></div>
               </div>
             </div>
-             <ul class="list-inline mb-0">
+             <ul class="list-inline mb-3 py-3">
               <li class="list-inline-item mb-2 mb-lg-0" style="text-align: center"><a class="btn btn-primary btn-lg px-4" href="https://forms.office.com/Pages/ResponsePage.aspx?id=3c9X5zUfV0Svj3ycaxQ340PritOjm0RNgACUwols-l9UMVI1RjQ5SUY4RE5XQVY5RVM2MkFJSE05Qy4u" target="_blank"> <i class="fas fa-edit mr-2"></i>Link to survey here</a></li>
             </ul>
           </div>
@@ -83,9 +83,9 @@
             <h2 class="h5 mb-4">Quick Links</h2>
             <div class="d-flex">
               <ul class="list-unstyled d-inline-block mr-4 mb-0">
-                <li class="mb-2"><a class="footer-link" href="#">About the project </a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Our Team </a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Contact us</a></li>
+                <li class="mb-2"><a class="footer-link" href="about.html">About the project </a></li>
+                <li class="mb-2"><a class="footer-link" href="team.html">Our Team </a></li>
+                <li class="mb-2"><a class="footer-link" href="contact.html">Contact us</a></li>
               </ul>
             </div>
           </div>
