--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section class="bg-center py-0" id="team" style="background: url(img/service-bg.svg) no-repeat; background-size: cover">
       <section class="about py-0">
         <div class="container">
-          <p class="h6 text-uppercase text-primary">Our Team</p>
+          <p class="h6 text-uppercase text-primary">Affiliations </p>
           <h2 class="mb-5"> </h2>
           <div class="row pb-5">
             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
@@ -94,7 +94,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-4 text-left">
                 <div class="card-body p-5">
-                 <a class="logo-img" href="#"><img src="img/idi-logo.png" alt="" width="250"></a>
+                 <a class="logo-img" href="#"><img src="img/RSNNE-logo.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
@@ -102,7 +102,6 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-4 text-left">
                 <div class="card-body p-5">
-                 <a class="logo-img" href="#"><img src="img/idi-logo.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
@@ -110,8 +109,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-4 text-left">
                 <div class="card-body p-5">
-
-                  
+                  <a class="logo-img" href="#"><img src="img/idi-logo.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
