--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-4 text-left">
-                <div class="card-body p-5">
+                <div class="card-body">
                   <a class="logo-img" href="#"><img src="img/ncl-logo.png" alt="" width="250"></a>
                 </div>
               </div>
@@ -93,7 +93,7 @@
              <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-4 text-left">
-                <div class="card-body p-5">
+                <div class="card-body">
                  <a class="logo-img" href="#"><img src="img/RSNNE-logo.png" alt="" width="250"></a>
                 </div>
               </div>
