--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-4 text-left">
                 <div class="card-body">
+                  <a class="logo-img" href="#"><img src="img/RSNNE-logo.png" alt="" width="250"></a>
+                </div>
+              </div>
+            </div>
+             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+              <!-- Services Item-->
+              <div class="cardl border-0 shadow rounded-lg py-4 text-left">
+                <div class="card-body">
                   <a class="logo-img" href="#"><img src="img/ncl-logo.png" alt="" width="250"></a>
                 </div>
               </div>
@@ -94,14 +102,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-4 text-left">
                 <div class="card-body">
-                 <a class="logo-img" href="#"><img src="img/RSNNE-logo.png" alt="" width="250"></a>
-                </div>
-              </div>
-            </div>
-             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-              <!-- Services Item-->
-              <div class="cardl border-0 shadow rounded-lg py-4 text-left">
-                <div class="card-body">
+                  <a class="logo-img" href="#"><img src="img/IDI-logo.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
@@ -109,7 +110,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-4 text-left">
                 <div class="card-body">
-                  <a class="logo-img" href="#"><img src="img/idi-logo.png" alt="" width="250"></a>
+                  <a class="logo-img" href="#"><img src="img/cabinet-office.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
