--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-2 text-left">
                 <div class="card-body">
-                  <a class="logo-img" href="#"><img src="img/RSNNE-logo.png" alt="" width="250"></a>
+                  <a class="logo-img" href="#"><img src="img/RSNNE.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
