--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
           <div class="row pb-5">
             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
-              <div class="cardl border-0 shadow rounded-lg py-3 text-left">
+              <div class="cardl border-0 shadow rounded-lg py-0 text-left" style=" padding: 1rem; ">
                 <div class="card-body">
-                  <a class="logo-img" href="#"><img src="img/north-logo.png" alt="" width="250"></a>
+                  <a class="logo-img" href="#"><img src="img/RSNNE.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
-              <div class="cardl border-0 shadow rounded-lg py-2 text-left">
+              <div class="cardl border-0 shadow rounded-lg py-3 text-left">
                 <div class="card-body">
-                  <a class="logo-img" href="#"><img src="img/RSNNE.png" alt="" width="250"></a>
+                  <a class="logo-img" href="#"><img src="img/north-logo.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
