--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="row pb-5">
             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
-              <div class="cardl border-0 shadow rounded-lg py-0 text-left" style=" padding: 1rem; ">
+              <div class="cardl border-0 shadow rounded-lg py-0" style=" padding: 1rem; ">
                 <div class="card-body">
                   <a class="logo-img" href="#"><img src="img/RSNNE.png" alt="" width="250"></a>
                 </div>
@@ -84,7 +84,7 @@
             </div>
             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
-              <div class="cardl border-0 shadow rounded-lg py-3 text-left">
+              <div class="cardl border-0 shadow rounded-lg py-3">
                 <div class="card-body">
                   <a class="logo-img" href="#"><img src="img/north-logo.png" alt="" width="250"></a>
                 </div>
@@ -92,7 +92,7 @@
             </div>
              <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
-              <div class="cardl border-0 shadow rounded-lg py-3 text-left">
+              <div class="cardl border-0 shadow rounded-lg py-3">
                 <div class="card-body">
                   <a class="logo-img" href="#"><img src="img/ncl-logo.png" alt="" width="250"></a>
                 </div>
@@ -100,7 +100,7 @@
             </div>
              <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
-              <div class="cardl border-0 shadow rounded-lg py-2 text-left">
+              <div class="cardl border-0 shadow rounded-lg py-2">
                 <div class="card-body">
                   <a class="logo-img" href="#"><img src="img/IDI-logo.png" alt="" width="250"></a>
                 </div>
@@ -108,7 +108,7 @@
             </div>
             <div class="col-lg-2 col-md-6">
               <!-- Services Item-->
-              <div class="cardl border-0 shadow rounded-lg py-1 text-left">
+              <div class="cardl border-0 shadow rounded-lg py-1">
                 <div class="card-body">
                   <a class="logo-img" href="#"><img src="img/cabinet-office.png" alt="" width="250"></a>
                 </div>
