--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-2">
                 <div class="card-body">
-                  <a class="logo-img" href="#"><img src="img/IDI-logo.png" alt="" width="250"></a>
+                  <a class="logo-img" href="#"><img src="img/openlab-logo.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
