--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <p class="h6 text-uppercase text-primary">Affiliations </p>
           <h2 class="mb-5"> </h2>
           <div class="row pb-5">
-            <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+            <div class="col-lg-2 col-md-6 mb-4 mb-lg-0 logo">
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-0" style=" padding: 1rem; ">
                 <div class="card-body">
@@ -82,7 +82,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+            <div class="col-lg-2 col-md-6 mb-4 mb-lg-0 logo">
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-3">
                 <div class="card-body">
@@ -90,7 +90,7 @@
                 </div>
               </div>
             </div>
-             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0 logo">
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-3">
                 <div class="card-body">
@@ -98,7 +98,7 @@
                 </div>
               </div>
             </div>
-             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0 logo">
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-3">
                 <div class="card-body">
@@ -108,7 +108,7 @@
             </div>
             <div class="col-lg-2 col-md-6">
               <!-- Services Item-->
-              <div class="cardl border-0 shadow rounded-lg py-1">
+              <div class="cardl border-0 shadow rounded-lg py-1 logo">
                 <div class="card-body">
                   <a class="logo-img" href="#"><img src="img/cabinet-office.png" alt="" width="250"></a>
                 </div>
