--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-0" style=" padding: 1rem; ">
                 <div class="card-body">
-                  <a class="logo-img" href="#"><img src="img/RSNNE.png" alt="" width="250"></a>
+                  <a class="logo-img rsn" href="#"><img src="img/RSNNE.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
