--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-3">
                 <div class="card-body">
-                  <a class="logo-img" href="#"><img src="img/north-logo.png" alt="" width="250"></a>
+                  <a class="logo-img" href="https://www.northumbria.ac.uk/"><img src="img/north-logo.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
@@ -93,7 +93,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-3">
                 <div class="card-body">
-                  <a class="logo-img" href="#"><img src="img/ncl-logo.png" alt="" width="250"></a>
+                  <a class="logo-img" href="https://www.ncl.ac.uk/"><img src="img/ncl-logo.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
@@ -101,7 +101,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-3">
                 <div class="card-body">
-                  <a class="logo-img" href="#"><img src="img/openlab-logo.png" alt="" width="250"></a>
+                  <a class="logo-img" href="https://openlab.ncl.ac.uk/"><img src="img/openlab-logo.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
