--- a/team.html
+++ b/team.html
@@ -66,7 +66,7 @@
                   <h3 class="font-weight-normal h5 my-4">Michael Potts </h3>
                   <p class="text-small mb-0">Chair of Regional Stakeholder Network North East</p>
                    <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="mailto:m.m.potts@ch-six.com"><i class="fas fa-envelope"></i></a></li>
                     <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
                    </ul>
                 </div>
@@ -82,7 +82,7 @@
                   <h3 class="font-weight-normal h5 my-4">Rob Wilson </h3>
                   <p class="text-small mb-0">Northumbria University</p>
                     <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="mailto:rob.wilson@northumbria.ac.uk"><i class="fas fa-envelope"></i></a></li>
                     <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
                    </ul>
                 </div>
@@ -98,7 +98,7 @@
                   <h3 class="font-weight-normal h5 my-4">Kyle Montague </h3>
                   <p class="text-small mb-0">Northumbria University</p>
                    <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="mailto:kyle.montague@newcastle.ac.uk"><i class="fas fa-envelope"></i></a></li>
                     <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
                    </ul>
                 </div>
@@ -114,7 +114,7 @@
                   <h3 class="font-weight-normal h5 my-4"> Abdulaziz Alderhami</h3>
                   <p class="text-small mb-0">Newcastle University</p>
                    <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="mailto:a.m.a.alderhami2@newcastle.ac.uk"><i class="fas fa-envelope"></i></a></li>
                     <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
                    </ul>
                 </div>
@@ -130,7 +130,7 @@
                   <h3 class="font-weight-normal h5 my-4">Anne Spaa </h3>
                   <p class="text-small mb-0">Northumbria University</p>
                    <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="mailto:anne.spaa@northumbria.ac.uk"><i class="fas fa-envelope"></i></a></li>
                     <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
                    </ul>
                 </div>
