--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/favicon1.png">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -69,7 +69,7 @@
             <p class="my-4">The North East Network and this consultation are a proactive and dynamic attempt to revolutionise how individuals and those who support them can have a voice in issues of Government policy that affect them. These networks are the first of its type ever attempted by Government with this set of communities. Together we can empower the local community and deliver solutions to government, together we give our region a voice.</p> 
             
             <p class="my-4">With kind regards,</p> 
-            <p class="my-4"><strong>Michael Potts<strong></p> 
+            <p class="my-4"><strong>Michael Potts</strong></p> 
             <p class="my-4">Chair of Regional Stakeholder Network North East</p> 
           </div>
           <div class="col-lg-5 ml-auto">
