--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
             
             <p class="my-4">With kind regards,</p> 
             <p class="my-4"><strong>Michael Potts</strong></p> 
-            <p class="my-4">Chair of Regional Stakeholder Network North East</p> 
+            Chair of Regional Stakeholder Network North East
             </div>
          </div>
       </div>
