--- a/about.html
+++ b/about.html
@@ -80,8 +80,7 @@
             <p class="my-4">The North East Network and this consultation are a proactive and dynamic attempt to revolutionise how individuals and those who support them can have a voice in issues of Government policy that affect them. These networks are the first of its type ever attempted by Government with this set of communities. Together we can empower the local community and deliver solutions to government, together we give our region a voice.</p> 
             
             <p class="my-4">With kind regards,</p> 
-            <p class="my-4"><strong>Michael Potts</strong></p> 
-            Chair of Regional Stakeholder Network North East
+            <p class="my-4"><strong>Michael Potts</strong><br />Chair of Regional Stakeholder Network North East</p> 
             </div>
          </div>
       </div>
