--- a/team.html
+++ b/team.html
@@ -140,7 +140,7 @@
         </div>
       </section>
     <a class="scropll-top-btn" id="scrollTop" href="#"><i class="fas fa-long-arrow-alt-up"></i></a>
-   <footer class="with-pattern-1 position-relative">
+<footer class="with-pattern-1 position-relative">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 mb-4 mb-lg-0"><img class="mb-2" src="img/logo.png" alt="" width="250">
@@ -164,6 +164,7 @@
               <li class="mb-2"><a class="footer-link" href="mailto:email@example.com">email@example.com</a></li>
             </ul>
             <ul class="list-inline mb-0">
+              <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-facebook-f"></i></a></li>
               <li class="list-inline-item"><a class="social-link" href="https://twitter.com/RSNInitiative"><i class="fab fa-twitter"></i></a></li>
             </ul>
           </div>
