--- a/about.html
+++ b/about.html
@@ -89,16 +89,16 @@
     <footer class="with-pattern-1 position-relative">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 mb-4 mb-lg-0"><img class="mb-4" src="img/logo.png" alt="" width="250">
+          <div class="col-lg-4 mb-4 mb-lg-0"><img class="mb-2" src="img/logo.png" alt="" width="250">
             <p class="text-muted">A Covid-19 response project by New Regional Stakeholder Network and Northumbria University</p>
           </div>
           <div class="col-lg-3 mb-4 mb-lg-0">
             <h2 class="h5 mb-4">Quick Links</h2>
             <div class="d-flex">
               <ul class="list-unstyled d-inline-block mr-4 mb-0">
-                <li class="mb-2"><a class="footer-link" href="about.html">About the project </a></li>
-                <li class="mb-2"><a class="footer-link" href="team.html">Our Team </a></li>
-                <li class="mb-2"><a class="footer-link" href="contact.html">Contact us</a></li>
+                <li class="mb-2"><a class="footer-link" href="#">About the project </a></li>
+                <li class="mb-2"><a class="footer-link" href="#">Our Team </a></li>
+                <li class="mb-2"><a class="footer-link" href="#">Contact us</a></li>
               </ul>
             </div>
           </div>
@@ -110,6 +110,7 @@
               <li class="mb-2"><a class="footer-link" href="mailto:email@example.com">email@example.com</a></li>
             </ul>
             <ul class="list-inline mb-0">
+              <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-facebook-f"></i></a></li>
               <li class="list-inline-item"><a class="social-link" href="https://twitter.com/RSNInitiative"><i class="fab fa-twitter"></i></a></li>
             </ul>
           </div>
@@ -117,7 +118,7 @@
       </div>
       <div class="copyrights">       
         <div class="container text-center py-4">
-          <p class="mb-0 text-muted text-sm">&copy; 2020.</p>
+          <p class="mb-0 text-muted text-sm">&copy; 2020. All Rights Reserved.</p>
         </div>
       </div>
     </footer>
